--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ Services Offered by TEAM V
 
 Discover the TEAM V advantage – where every service is crafted with innovation, powered by AI, and designed to propel your business towards unparalleled success.  
              Vist our docs: from the following link:
-			 copy and paste it in your browser: https://bit.ly/TEAMV-DOCS
+			 copy and paste it in your browser: https://bit.ly/48rh34Y
 			
 			
     </body>
