--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,6 @@ Discover the TEAM V advantage – where every service is crafted with innovation
              Vist our docs: from the following link:
 			 copy and paste it in your browser: https://bit.ly/3NYhQCr
 			
-			<script id="__webwhizSdk__" src="https://widget.webwhiz.ai/webwhiz-sdk.js" data-chatbot-id="65b6bbd13754525d6666ac53"></script>
+			<script id="__webwhizSdk__" src="https://cdn.discordapp.com/attachments/727620426485858380/1201272217313480704/webwhiz-sdk.js?ex=65c936ef&is=65b6c1ef&hm=989791f13e3afeb2d396287ee16d1a616b2e0f1b90a883a802d8e2e910c87a2f&" data-chatbot-id="65b6bbd13754525d6666ac53"></script>
 		   </body>
 </html>
