--- a/index.html
+++ b/index.html
@@ -1104,18 +1104,6 @@ Discover the TEAM V advantage – where every service is crafted with innovation
              Vist our docs: from the following link:
 			 copy and paste it in your browser: https://bit.ly/3NYhQCr
 			
-			<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/65bab18d8d261e1b5f5a3a9b/1hlgkb4l5';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+	<script async data-id="1742459359" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 		   </body>
 </html>
