--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,6 @@ Discover the TEAM V advantage – where every service is crafted with innovation
              Vist our docs: from the following link:
 			 copy and paste it in your browser: https://bit.ly/3NYhQCr
 			
-	<script id="__webwhizSdk__" src="https://widget.webwhiz.ai/webwhiz-sdk.js" data-chatbot-id="65babfdb77e06f63393f9272"></script>
+	<script async data-id="1742459359" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 		   </body>
 </html>
