--- a/Vfreelance.html
+++ b/Vfreelance.html
@@ -1077,6 +1077,8 @@ At V-Freelance, we believe in empowering freelancers by providing a diverse rang
 	
 	Download V Freelance PDF using the following link :
 	https://bit.ly/VFreelance-PDF
-	
+	<script id="__webwhizSdk__" data-chatbot-id="65da54a7aa24a974dff005d5"
+src="https://widget.webwhiz.ai/webwhiz-sdk.js">
+</script>
     </body>
 </html>
